deploy/llmd-local/ms-local-route-direct.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ms-local-route-direct
  namespace: llm-d-local
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: infra-local-inference-gateway
      namespace: llm-d-local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: ms-local-decode-direct
          port: 8000
          weight: 1
